# tauri-plugin-updater

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  api-iife.js  package.json  pnpm-lock.yaml  rollup.config.js
src/: updater.rs
