[package]
name = "tauri-plugin-updater"
version = "2.0.0-rc.0"
description = "In-app updates for Tauri applications."
links = "tauri-plugin-updater"
edition = "2021"
authors = ["47vigen"]
rust-version = "1.75"

[package.metadata.docs.rs]
rustc-args = [ "--cfg", "docsrs" ]
rustdoc-args = [ "--cfg", "docsrs" ]

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.0", features = [ "build" ] }

[dependencies]
tauri = { version = "2.0.0-rc.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
] }
url = "2"
http = "1"
minisign-verify = "0.2"
time = { version = "0.3", features = ["parsing", "formatting"] }
base64 = "0.22"
semver = { version = "1", features = ["serde"] }
futures-util = "0.3"
tempfile = "3"
infer = "0.15"

[target."cfg(target_os = \"windows\")".dependencies]
zip = { version = "2", default-features = false, optional = true }
windows-sys = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

[target."cfg(target_os = \"linux\")".dependencies]
dirs = "5"
tar = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }

[target."cfg(target_os = \"macos\")".dependencies]
tar = "0.4"
flate2 = "1"

[features]
default = ["native-tls", "zip"]
zip = ["dep:zip", "dep:tar", "dep:flate2"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
# rustls-tls = ["reqwest/rustls-tls"]
